--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,33 @@
 # Dependencies
 node_modules/
-*/node_modules/
-
-# Environment variables
-.env
-*/.env
-
-# Build outputs
-build/
-dist/
-*/build/
-*/dist/
-
-# Logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+dist/
+build/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
 
 # Runtime data
 pids
@@ -27,21 +38,6 @@ pids
 # Coverage directory used by tools like istanbul
 coverage/
 
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Temporary files
-*.tmp
-*.temp
+# Temporary folders
+tmp/
+temp/
