--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,37 @@
 {
-  "name": "backend",
+  "name": "bus-management-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for Bus Management System",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "seed": "node seedData.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "-": "^0.0.1",
-    "bcrypt": "^6.0.0",
-    "cookie-parser": "^1.4.7",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.2",
-    "nodemailer": "^7.0.6",
-    "nodemon": "^3.1.10"
-  }
+    "mongoose": "^7.5.0",
+    "nodemailer": "^6.9.4",
+    "socket.io": "^4.8.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": [
+    "bus",
+    "management",
+    "system",
+    "nodejs",
+    "express",
+    "mongodb"
+  ],
+  "author": "Bus Management Team",
+  "license": "MIT"
 }
