--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.4.1",
     "socket.io-client": "^4.8.3"
   },
